--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -29,6 +29,7 @@
     "validator": "^13.11.0",
     "web-vitals": "^2.1.4",
     "zxcvbn": "^4.4.2"
+    "puppeteer-core": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
