--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -28,14 +28,15 @@
     "redux-thunk": "^2.4.2",
     "validator": "^13.11.0",
     "web-vitals": "^2.1.4",
-    "zxcvbn": "^4.4.2"
+    "zxcvbn": "^4.4.2",
     "puppeteer-core": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "functional-test": "node functionalTest.js"
   },
   "eslintConfig": {
     "extends": [
